--- a/public/room.html
+++ b/public/room.html
@@ -6,6 +6,15 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <title>バーチャルポスター</title>
+    <meta
+      name="viewport"
+      content="width=320,
+      height=480,
+      initial-scale=0.6,
+      minimum-scale=0.6,
+      maximum-scale=0.6,
+      user-scalable=yes"
+    />
   </head>
 
   <body>
