--- a/public/room.html
+++ b/public/room.html
@@ -13,7 +13,7 @@
       initial-scale=0.6,
       minimum-scale=0.6,
       maximum-scale=0.6,
-      user-scalable=yes"
+      user-scalable=0"
     />
   </head>
 
