Poster view. Movement.

--- a/public/login.html
+++ b/public/login.html
@@ -11,6 +11,12 @@
       href="https://www.gstatic.com/firebasejs/ui/4.5.0/firebase-ui-auth.css"
     />
     <title>バーチャルポスターセッション</title>
+
+    <link
+      type="text/css"
+      rel="stylesheet"
+      href="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.css"
+    />
   </head>
 
   <body>
