--- a/public/create_room.html
+++ b/public/create_room.html
@@ -4,9 +4,8 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <meta name='description' content="二次元マップを歩き回ってチャットやポスター閲覧ができるバーチャルポスターセッション">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
-    <title>バーチャルポスターセッション</title>
+    <title>会場の作成 - バーチャルポスターセッション</title>
   </head>
 
   <body>
