Inactive people movement. Mobile stub.

--- a/public/room.html
+++ b/public/room.html
@@ -17,7 +17,7 @@
     />
   </head>
 
-  <body>
+  <body style="margin: 0px;">
     <noscript>
       <strong
         >We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work
