--- a/public/admin.html
+++ b/public/admin.html
@@ -11,6 +11,10 @@
       href="https://www.gstatic.com/firebasejs/ui/4.5.0/firebase-ui-auth.css"
     />
     <title>管理画面</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css"
+    />
   </head>
 
   <body>
