--- a/public/room.html
+++ b/public/room.html
@@ -3,10 +3,15 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width,initial-scale=1.0, minimum-scale=1.0,
+    maximum-scale=1.0,
+    user-scalable=0"
+    />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <title>バーチャルポスター</title>
-    <meta
+    <!-- <meta
       name="viewport"
       content="width=320,
       height=480,
@@ -14,6 +19,10 @@
       minimum-scale=0.6,
       maximum-scale=0.6,
       user-scalable=0"
+    /> -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css"
     />
   </head>
 
