--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,10 @@
     />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <title>バーチャルポスターセッション</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css"
+    />
   </head>
 
   <body>
